lesson4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 # this is the new alpha field, whose default value is 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"  # Указываем метку для выбора узлов
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          preStop:
            exec:
              command:
                - rm -f /homework/index.html
        ports:
        - containerPort: 8000
          name: http-port
        volumeMounts:
        - name: homework
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        resources:
          requests:
            cpu: "50m"
            memory: "128M"
          limits:
            cpu: "50m"
            memory: "128M"
        readinessProbe:
          httpGet:
            path: /index.html
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 5
      dnsPolicy: Default
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: homework
        emptyDir: {}
