lesson4/service.yaml
apiVersion: v1
kind: Service
type: ClusterIP
metadata:
  name: nginx
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 9000
      targetPort: http-port
