lesson4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus" 
    http:
        paths:
        - path: /homepage$
          pathType: ImplementationSpecific
          backend:
            service:
              name: nginx
              port:
                number: 9000
